# deep-db-agents

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml
docs/reference/: backend_registry.md  base.md  connection.md  dialects.md  exceptions.md  factory.md  guardrails.md  index.md  observability.md  pooling.md  prompts.md  query_errors.md  registry.md  tabular.md  url.md  workspace.md
examples/: async_quickstart.py  multi_db_orchestrator.py  mysql_quickstart.py
src/deep_db_agents/: __init__.py  backend_registry.py  base.py  connection.py  exceptions.py  factory.py  guardrails.py  observability.py  pooling.py  query_errors.py  registry.py  tabular.py  url.py  workspace.py
src/deep_db_agents/dialects/: __init__.py  search_base.py  sql_base.py
src/deep_db_agents/dialects/duckdb/: __init__.py  dialect.py  prompt.py  tools.py
src/deep_db_agents/dialects/elasticsearch/: __init__.py  dialect.py  prompt.py  tools.py
src/deep_db_agents/dialects/mariadb/: __init__.py  dialect.py  prompt.py
src/deep_db_agents/dialects/mongodb/: __init__.py  dialect.py  prompt.py  tools.py
src/deep_db_agents/dialects/mysql/: __init__.py  dialect.py  prompt.py  tools.py
src/deep_db_agents/dialects/neo4j/: __init__.py  dialect.py  prompt.py  tools.py
src/deep_db_agents/dialects/opensearch/: __init__.py  dialect.py  prompt.py  tools.py
src/deep_db_agents/dialects/postgres/: __init__.py  dialect.py  prompt.py  tools.py
src/deep_db_agents/dialects/sqlite/: __init__.py  dialect.py  prompt.py  tools.py
src/deep_db_agents/prompts/: __init__.py  orchestrator.py  shared.py
tests/: conftest.py  test_async.py  test_backend_registry.py  test_factory.py  test_guardrails.py  test_observability.py  test_pooling.py  test_query_errors.py  test_registry.py  test_url.py  test_workspace.py
tests/dialects/: test_duckdb.py  test_elasticsearch.py  test_mariadb.py  test_mongodb.py  test_mysql.py  test_neo4j.py  test_opensearch.py  test_postgres.py  test_sqlite.py
